--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@ html, body{
 	border-radius: 2em;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
+.calcOutput{
+	background-color: #FFFFFF;
+	height: 50px;
+	padding: 3px 0;
+	margin: 3px 21px;
+	padding-bottom: 15px;
+}
 #total{
 	margin-left: 7px;
 	width: 200px;
